<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="elections_logo">Elections logo</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_info">Ballot Information</string>
    <string name="correspondence_address">Correspondence Address</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="use_my_location">Use My Location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="twitter_profile">Twitter Profile</string>
    <string name="facebook_profile">Facebook Profile</string>
    <string name="representative_photo">Representative Photo</string>
    <string name="web_profile">Web Profile</string>
    <string name="grant_location_permission">You need to grant location permission in order to look for your location.</string>
    <string name="settings">Settings</string>
    <string name="error_api">An error occurred while retrieving API data.</string>
</resources>
